--- a/SAFRONCode/package.json
+++ b/SAFRONCode/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ngx-translate/core": "^9.1.1",
+    "@ngx-translate/http-loader": "^6.0.0",
     "bootstrap": "^5.1.1",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
