--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "bootstrap": "^5.1.1",
     "font-awesome": "^4.7.0",
+    "ng2-tree": "^2.0.0-rc.11",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
