--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "resolveJsonModule": true,
     "downlevelIteration": true,
     "experimentalDecorators": true,
+    "strictPropertyInitialization": false,
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2017",
